--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         button {
             margin: 5px;
         }
+
+        #toggleAutoScrollBtn {
+            margin-top: 10px;
+        }
     </style>
 </head>
 <body>
