--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             width: 100%;
             height: 300px;
             border: 1px solid #ccc;
-            overflow-y: scroll;
+            overflow-y: auto;  /* Assure que la barre de défilement est activée quand nécessaire */
             white-space: pre-wrap;
             padding: 10px;
             background-color: #f9f9f9;
